Fixes missing color

--- a/base/colors.less
+++ b/base/colors.less
@@ -9,6 +9,7 @@
 @orange: #D38D5E;
 @yellow: #FEF935;
 @green: #51C34F;
+@dark-green: #5ECA61;
 @cyan: #2CB6B1;
 @blue: #0A6FFF;
 @magenta: #E12DA0;
